# projekAlproPrakLanjut

./: .gitignore  CMakeLists.txt  README.md  belajar.cpp  dasbord.css  dasbord.html  dasbord.js
public/client/: kendaraanTidakDitemukan.html  lapor.html  pengumumanUser.html  yourTickets.html
public/templates/: cariAsc.html  cariDesc.html  cariKendaraan.html  cekKendaraan.html  editPengumuman.html  home.html  isiPengumuman.html  kendaraanKeluar.html  kendaraanMasuk.html  pengumuman.html  pengumumanUser.html  riwayatKendaraanKeluar.html
src/: function.h  main.cpp
src/database/: fileKendaraan.txt  fileLaporPribadi.txt  filePengumuman.txt  riwayatKendaraan.txt
